--- a/0Scikit-Learn之旅.ipynb
+++ b/0Scikit-Learn之旅.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "![Algorithms in Scikit-Learn](images/sklearn_algorithms.png)\n",
     "\n",
-    "Scikit-Learn是一个用Python实现的强大的机器学习库，包含许多用于分类、回归、聚类、特征提取和优化的现代机器学习算法（如图），运用Numpy、Scipy和matplotlib可以对中小型数据集进行极快的分析。Scikit-Learn开源，商业上可用，因此它通常是数据科学家工具包中第一个用于机器学习的工具。\n",
+    "Scikit-Learn是一个用Python实现的强大的机器学习库，包含许多用于分类、回归、聚类、特征提取和优化的现代机器学习算法（如图），运用Numpy、Scipy和matplotlib可以对中小型数据集进行极快的分析。Scikit-Learn开源，商业上可用，因此它通常是数据科学家工具包中[第一个用于机器学习的工具](https://github.com/DistrictDataLabs/machine-learning/tree/master/notebook)。\n",
     "\n",
     "无论是回归（regression）还是分类（classification），都是想建立一个预测模型（输入一个样本, 可以输出一个预测结果），都是监督式学习。两者不同的只是在分类问题中, 预测结果是离散的，即类别; 而在回归问题中预测结果是连续的。所以总得来说，两种问题的学习算法都很类似，在分类问题中用到的学习算法，在回归问题中也能使用。分类问题最常用的学习算法包括SVM (支持向量机) , SGD (随机梯度下降算法), Bayes (贝叶斯估计), Ensemble, KNN 等。而回归问题也能使用SVR, SGD, Ensemble等算法，以及其它线性回归算法。\n",
     "\n",
