--- a/0Scikit-Learn之旅.ipynb
+++ b/0Scikit-Learn之旅.ipynb
@@ -575,7 +575,7 @@
     "\n",
     "分类是一个监督式机器学习问题，给定标记的输入数据（带有两个或多个标签），任务是拟合一个可以预测离散输入数据类别的函数。\n",
     "\n",
-    "学习预测函数的参数并在相同数据上进行测试是错误的：一个只重复它刚刚看到的样本标签的模型将获得满分，但无法预测对尚未看到的数据有任何有用的东西。这种情况被称为过拟合。[交叉验证](#交叉验证Cross-Validation)是统计学上的一种用于防止模型过拟合的办法。\n",
+    "学习预测函数的参数并在相同数据上进行测试是错误的：一个只重复它刚刚看到的样本标签的模型将获得满分，但无法预测对尚未看到的数据有任何有用的东西。这种情况被称为过拟合，它意味着模型泛化能力差，不能很好地适应实际应用场景。为确保测试的准确性，把数据分为训练数据集和测试数据集，一般按照8:2或7:3来划分，用前者训练模型，训练出参数后再用后者测试模型的准确度。理论上更合理的方案是把数据集划分成三个，此外还要再加一个[交叉验证](#交叉验证Cross-Validation)，它是统计学上的一种用于防止模型过拟合的办法。\n",
     "\n",
     "注意：运行分类算法之前请[初始化importers与sklearn数据集](#初始化importers与sklearn数据集)。"
    ]
@@ -1300,7 +1300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 案例：如何更好地开展机器学习实验\n",
+    "# 案例：如何更好地开展基于机器学习的实验研究\n",
     "\n",
     "通过几个问题，先回顾一下我们的Scikit-Learn之旅：\n",
     "\n",
@@ -1308,8 +1308,15 @@
     "* 分类与聚类的联系与区别是什么？\n",
     "* 正则化的目的是什么？\n",
     "* 交叉验证的目的是什么？\n",
+    "* 为什么要把数据集分成训练集和测试集？\n",
     "\n",
-    "一个完整的机器学习实验项目应包含4步：数据集->实验准备/数据清洗–>生成/训练模型–>模型评价/结果分析，其中最后两步“训练-评价”是一个以交叉验证为代表的不断迭代优化实验代码和模型的过程。以k-折交叉验证为例，它包含以下几步：\n",
+    "“实验”一词不仅仅表示学术用途，即使在商业环境中，机器学习应用开发通常也是从实验开始的。一个完整的机器学习应用项目应包含7步：（1）数据采集和标记，（2）数据清洗，（3）特征选择，（4）模型选择，（5）模型训练和测试，（6）模型性能评估和优化，（7）模型使用。假设我们要开发一个房价评估系统，目标是对一个已知特征的房子价格进行评估预测，那么：\n",
+    "\n",
+    "* 以房价评估预测为背景，对其机器学习应用开发的7个步骤进行解释说明。\n",
+    "\n",
+    "这7个步骤就像软件开发的“瀑布模型”一样，机器学习应用开发可以通过一系列步骤顺序开展，每个步骤的任务明确。但问题同样存在，即：如果有信息未被覆盖或者发现了问题，那么最好 “返回”上一个步骤或者之前的某个步骤并进行适当的修改完善，而修改是有成本的。\n",
+    "\n",
+    "注意步骤（1）很关键，采集什么数据，怎么采集它们，无论时间上还是费用上，这个成本都很高；步骤（3）需要（人工地）逐个分析各个数据特征及其关联；如果应用成熟的算法模型，步骤（4）就很简单；步骤（5）是一个反复修改的“训练-评价”过程；步骤（6）也很关键，因为性能评估包含模型评价和结果分析，它们有很多面向。步骤（5）是一个以交叉验证为代表的不断迭代优化实验代码和模型的过程，以k-折交叉验证为例，它包含以下几步：\n",
     "\n",
     "1. 将数据集k等分，即k-折；\n",
     "2. 使用折叠1作为测试集，使用其他折叠的联合作为训练集；\n",
@@ -1319,14 +1326,14 @@
     "\n",
     "由于流水线（pipline）技术使交叉验证的代码编写更容易，更高级地还可以考虑以下问题：\n",
     "\n",
-    "1. 为什么使用OneHotEncoder对类别进行编码？怎么做？\n",
-    "2. 如何使用ColumnTransformer将OneHotEncoder应用于选定列？\n",
-    "3. 您如何构建和交叉验证一个流水线？\n",
-    "4. 如何使用流水线对新数据进行预测？\n",
-    "5. 你为什么要使用scikit-learn（而不是pandas）进行数据预处理？\n",
+    "* 为什么使用OneHotEncoder对类别进行编码？怎么做？\n",
+    "* 如何使用ColumnTransformer将OneHotEncoder应用于选定列？\n",
+    "* 您如何构建和交叉验证一个流水线？\n",
+    "* 如何使用流水线对新数据进行预测？\n",
+    "* 你为什么要使用scikit-learn（而不是pandas）进行数据预处理？\n",
     "\n",
     "\n",
-    "## 数据集下载\n",
+    "## 数据集下载（数据采集和标记）\n",
     "\n",
     "<span class=\"girk\">思考的问题</span>：命名？放哪？更新时，为什么要兼容以前的版本？怎么为更新命名？"
    ]
@@ -1426,7 +1433,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 实验设计：预测什么\n",
+    "## 数据清洗\n",
+    "\n",
+    "假设我们采集到的数据里，关于房子面积，有包含公摊面积的，有不包含的，这时需要对此进行统一。这个过程称为数据清洗。它还包括去掉重复的数据及噪声数据，让数据具有结构化的特征，以方便作为机器学习算法的输入。\n",
+    "\n",
+    "### 填补缺省值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-09T12:01:12.945052Z",
+     "start_time": "2022-04-09T12:01:12.916821Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 16512 entries, 17606 to 15775\n",
+      "Columns: 9 entries, longitude to ocean_proximity\n",
+      "dtypes: float64(8), object(1)\n",
+      "memory usage: 1.3+ MB\n",
+      ">>>>>>>>>>>>>>>> Housing\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16512 entries, 0 to 16511\n",
+      "Columns: 8 entries, longitude to median_income\n",
+      "dtypes: float64(8)\n",
+      "memory usage: 1.0 MB\n",
+      ">>>>>>>>>>>>>>>> Housing imputed\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.impute import SimpleImputer as Imputer\n",
+    "\n",
+    "#删除房价列后复制给新的变量。该函数默认删除行，加axis=1表示删除列\n",
+    "housing = strat_train_set.drop(\"median_house_value\", axis=1)\n",
+    "housing_labels = strat_train_set[\"median_house_value\"].copy()\n",
+    "#删除非数据类型的属性\n",
+    "housing_num = housing.drop(\"ocean_proximity\", axis=1)\n",
+    "\n",
+    "#建立一个填补缺失的工具imputer，策略是使用中位数\n",
+    "imputer = Imputer(strategy=\"median\")\n",
+    "#将imputer拟合到数据集\n",
+    "imputer.fit(housing_num)\n",
+    "#将缺失值替换为中位数\n",
+    "X = imputer.transform(housing_num)\n",
+    "#将X(这是numpy数组)转换为Pandas的Dataframe数据集类型\n",
+    "housing_tr = pd.DataFrame(X, columns=housing_num.columns)\n",
+    "print(\">>>>>>>>>>>>>>>> Housing\".format(housing.info(verbose=False)))\n",
+    "print(\">>>>>>>>>>>>>>>> Housing imputed\".format(housing_tr.info(verbose=False)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 特征选择\n",
+    "\n",
+    "假设我们采集到了100个房子的特征，通过逐个分析这些特征，最终选择了30个特征作为输入。这个过程称为特征选择。一个选择方法是人工选择，即人工对特征数据进行分析，然后选择合适的特征集合。另一个选择方法是通过算法模型自动完成，例如采用主成分分析（PCA）。\n",
     "\n",
     "### 按照收入进行分层抽样\n",
     "\n",
@@ -1460,9 +1530,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 预测什么？房价\n",
+    "### 分析数据相关性\n",
     "\n",
-    "使用Pandas创建关联矩阵（correlation matrix)，发现正相关的属性。根据数据相干性和可视化，将房价的中位数作为标签（即要预测的东西）"
+    "使用Pandas创建关联矩阵（correlation matrix)，发现正相关的数据特征。根据数据相干性和可视化，将房价的中位数作为标签（即要预测的东西）"
    ]
   },
   {
@@ -1543,72 +1613,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 数据准备\n",
-    "\n",
-    "将房价的中位数作为标签（要预测的东西）\n",
-    "\n",
-    "### 数据清洗（填补缺省值）"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-04-09T12:01:12.945052Z",
-     "start_time": "2022-04-09T12:01:12.916821Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 16512 entries, 17606 to 15775\n",
-      "Columns: 9 entries, longitude to ocean_proximity\n",
-      "dtypes: float64(8), object(1)\n",
-      "memory usage: 1.3+ MB\n",
-      ">>>>>>>>>>>>>>>> Housing\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 16512 entries, 0 to 16511\n",
-      "Columns: 8 entries, longitude to median_income\n",
-      "dtypes: float64(8)\n",
-      "memory usage: 1.0 MB\n",
-      ">>>>>>>>>>>>>>>> Housing imputed\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.impute import SimpleImputer as Imputer\n",
-    "\n",
-    "#删除房价列后复制给新的变量。该函数默认删除行，加axis=1表示删除列\n",
-    "housing = strat_train_set.drop(\"median_house_value\", axis=1)\n",
-    "housing_labels = strat_train_set[\"median_house_value\"].copy()\n",
-    "#删除非数据类型的属性\n",
-    "housing_num = housing.drop(\"ocean_proximity\", axis=1)\n",
-    "\n",
-    "#建立一个填补缺失的工具imputer，策略是使用中位数\n",
-    "imputer = Imputer(strategy=\"median\")\n",
-    "#将imputer拟合到数据集\n",
-    "imputer.fit(housing_num)\n",
-    "#将缺失值替换为中位数\n",
-    "X = imputer.transform(housing_num)\n",
-    "#将X(这是numpy数组)转换为Pandas的Dataframe数据集类型\n",
-    "housing_tr = pd.DataFrame(X, columns=housing_num.columns)\n",
-    "print(\">>>>>>>>>>>>>>>> Housing\".format(housing.info(verbose=False)))\n",
-    "print(\">>>>>>>>>>>>>>>> Housing imputed\".format(housing_tr.info(verbose=False)))"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 回顾与展望\n",
+    "\n",
+    "* 从事机器学习相关研究的基本知识和技能有哪些？\n",
+    "* 如何更好地开展基于机器学习的实验研究？\n",
+    "* 如何在广度和深度上继续学习钻研？\n",
+    "\n",
+    "## 数学基础\n",
+    "\n",
+    "数学是机器学习的基础，良好的数学功底可以达到事半功倍的效果。机器学习主要涉及概率与统计、线性代数和微积分等课程，读大学时觉得这些课程等用途不大，当想进入机器学习这一行后，就不免有些后悔了。现在网络资源丰富，视频教程也很多，建议多花些时间再学习一遍，动手实验的过程中回顾这些课程里的数学概念，会突然有醍醐灌顶的感觉，一下子豁然开朗起来。\n",
+    "\n",
+    "## 英语\n",
+    "\n",
+    "在人工智能应用领域，我国略有领先，但是在基础算法研究及基础架构开发方面，我国还是有差距的，起引领作用的还是美国的研究机构、大学院校和大公司。要想接触到第一手的SOTA（state-of-the-art）资料，必须学好英语。\n",
+    "\n",
+    "## 横向对比学习\n",
+    "\n",
+    "1. 李航，《统计学习方法》\n",
+    "2. The Elements of Statistical Learning，大而全的算法工具书\n",
+    "3. 视频教程：吴恩达《Machine Learning》"
+   ]
   },
   {
    "cell_type": "code",
