--- a/0Scikit-Learn之旅.ipynb
+++ b/0Scikit-Learn之旅.ipynb
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-09T02:16:43.636298Z",
-     "start_time": "2022-04-09T02:16:43.526021Z"
+     "end_time": "2022-04-15T07:33:53.436756Z",
+     "start_time": "2022-04-15T07:33:53.196290Z"
     }
    },
    "outputs": [
@@ -119,6 +119,13 @@
     "linnerud = load_linnerud()\n",
     "print(\"{0:>9} {ds[0]:>4} samples {ds[1]:>2} features\".format(\"Linnerud:\", ds=linnerud.data.shape))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -582,11 +589,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-09T02:02:36.637349Z",
-     "start_time": "2022-04-09T02:02:36.631251Z"
+     "end_time": "2022-04-15T07:47:24.395512Z",
+     "start_time": "2022-04-15T07:47:24.384719Z"
     }
    },
    "outputs": [],
@@ -604,6 +611,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -614,11 +628,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-09T02:02:40.585185Z",
-     "start_time": "2022-04-09T02:02:40.550671Z"
+     "end_time": "2022-04-15T07:48:58.913823Z",
+     "start_time": "2022-04-15T07:48:58.723147Z"
     }
    },
    "outputs": [
@@ -628,14 +642,22 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00        10\n",
-      "           1       0.91      0.83      0.87        12\n",
-      "           2       0.78      0.88      0.82         8\n",
+      "           0       1.00      1.00      1.00         9\n",
+      "           1       0.91      1.00      0.95        10\n",
+      "           2       1.00      0.91      0.95        11\n",
       "\n",
-      "    accuracy                           0.90        30\n",
-      "   macro avg       0.90      0.90      0.90        30\n",
-      "weighted avg       0.90      0.90      0.90        30\n",
+      "    accuracy                           0.97        30\n",
+      "   macro avg       0.97      0.97      0.97        30\n",
+      "weighted avg       0.97      0.97      0.97        30\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rchen/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:947: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n"
      ]
     }
    ],
@@ -645,6 +667,13 @@
     "model = LogisticRegression(solver='lbfgs', multi_class='auto')\n",
     "train_evaluate(model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
