--- a/0Scikit-Learn之旅.ipynb
+++ b/0Scikit-Learn之旅.ipynb
@@ -19,13 +19,15 @@
    "source": [
     "# 关于机器学习库Scikit-Learn\n",
     "\n",
-    "当我们谈论数据科学和数据科学管道时，我们通常谈论的是用于特定目的的数据挖掘，即对数据孕含一些可能的假设建模。机器学习是通过使用现有数据和统计方法来创建适合数据的模型的参数表示来训练一些模型，本质上意味着机器学习算法使用统计过程从示例中学习，然后将其学到的知识应用于未来的输入来预测结果。\n",
+    "当我们谈论数据科学和数据科学管道时，我们通常谈论的是用于特定目的的数据挖掘，即对数据孕含一些可能的假设建模。机器学习是通过使用现有数据和统计方法来创建适合数据的模型的参数表示来训练一些模型，本质上意味着机器学习算法使用统计过程从示例中学习，然后将其学到的知识应用于未来的输入来预测结果，换言之机器学习使我们能够以有意义的方式处理新数据，预测新数据将在哪里适配我们的模型。\n",
     "\n",
-    "机器学习可以用两种方法进行经典总结：监督式学习和非监督式学习。在监督式学习中，“正确答案”会提前标注，该算法试图根据这些答案来适应决策空间。在无监督式学习中，算法试图将示例分组在一起，通过距离度量推断相似性。机器学习使我们能够以有意义的方式处理新数据，预测新数据将在哪里适合我们的模型。\n",
+    "![Overview of Machine Learning](images/ml_overview.jpeg)\n",
+    "\n",
+    "监督式学习和非监督式学习是机器学习的经典总结：在监督式学习中，“正确答案”会提前标注，该算法试图根据这些答案来适应决策空间。在无监督式学习中，算法试图将示例分组在一起，通过距离度量推断相似性。现在，机器学习相关技术（如上图所示）还包括半监督学习、迁移学习（transfer learning）、强化学习等；按照任务，机器学习可以分为回归、分类、结构性学习等；按照技术方法分，可以分为线性模型，非线性模型（如深度学习、SVM、决策树、KNN）等。\n",
+    "\n",
+    "Scikit-Learn是一个用Python实现的强大的机器学习库，包含许多用于分类、回归、聚类、特征提取和优化的现代机器学习算法（如下图所示），运用Numpy、Scipy和matplotlib可以对中小型数据集进行极快的分析。Scikit-Learn开源，商业上可用，因此它通常是数据科学家工具包中[第一个用于机器学习的工具](https://github.com/DistrictDataLabs/machine-learning/tree/master/notebook)。\n",
     "\n",
     "![Algorithms in Scikit-Learn](images/sklearn_algorithms.png)\n",
-    "\n",
-    "Scikit-Learn是一个用Python实现的强大的机器学习库，包含许多用于分类、回归、聚类、特征提取和优化的现代机器学习算法（如图），运用Numpy、Scipy和matplotlib可以对中小型数据集进行极快的分析。Scikit-Learn开源，商业上可用，因此它通常是数据科学家工具包中[第一个用于机器学习的工具](https://github.com/DistrictDataLabs/machine-learning/tree/master/notebook)。\n",
     "\n",
     "无论是回归（regression）还是分类（classification），都是想建立一个预测模型（输入一个样本, 可以输出一个预测结果），都是监督式学习。两者不同的只是在分类问题中, 预测结果是离散的，即类别; 而在回归问题中预测结果是连续的。所以总得来说，两种问题的学习算法都很类似，在分类问题中用到的学习算法，在回归问题中也能使用。分类问题最常用的学习算法包括SVM (支持向量机) , SGD (随机梯度下降算法), Bayes (贝叶斯估计), Ensemble, KNN 等。而回归问题也能使用SVR, SGD, Ensemble等算法，以及其它线性回归算法。\n",
     "\n",
@@ -121,13 +123,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -141,7 +136,8 @@
     "ExecuteTime": {
      "end_time": "2022-04-08T14:23:29.104213Z",
      "start_time": "2022-04-08T14:23:27.922424Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -504,7 +500,7 @@
     "\n",
     "线性回归问题的实质就是训练一个函数$f(X)=\\theta^{T} X=Y$，它可以通过最小二乘法来计算，即$\\theta=\\left(X^{T} X\\right)^{-1} X^{T} Y$，但是由于最小二乘法需要计算矩阵的逆，所以有很多的限制，比如矩阵不可逆，又或者矩阵中有多重共线性的情况，会导致计算矩阵的逆的时候行列式接近0，对数据很敏感，还有可能在训练模型的时候有过拟合的情况出现。\n",
     "\n",
-    "正则化方法通过对系数加一个“惩罚项”来减少模型的过度拟合，推导过程参见[线性回归中的正则化 - 知乎](https://zhuanlan.zhihu.com/p/62457875)。\n",
+    "正则化方法通过对系数加一个“惩罚项”来减少模型的过度拟合，推导过程参见[线性回归中的正则化 - 知乎](https://zhuanlan.zhihu.com/p/62457875)，阅读[梯度下降，L2,L1,L0范数](https://blog.csdn.net/qq_29409037/article/details/90179633)学习更基础的相关知识。下图中LASSO正则化使用L2范数，Ridge Regression使用L1范数，红色轮廓线是没有正则化损失函数的等高线，中心点$\\hat(\\beta)$为最优解，天蓝色为正则化的限制区域。L2和L1范数的几何解释是：在正则化的限制之下，L2正则化给出的最优解（等高线与限制区域的交会点）是使解更加靠近原点，也就是说L2正则化能降低参数范数的总和。L1正则化给出的最优解是使解更加靠近某些轴，而其它的轴则为0，所以L1正则化能使得到的参数稀疏化。\n",
     "\n",
     "![LASSO vs. Ridge Regression](images/regularization.jpg)\n",
     "\n",
