--- a/3.KNearestNeighborsK近邻.ipynb
+++ b/3.KNearestNeighborsK近邻.ipynb
@@ -139,7 +139,7 @@
     "![fig3_2](images/fig3_2.png)\n",
     "\n",
     "##### $L_p$距离与范数\n",
-    "范数$||w||=\\left(\\sum^n_{l=1}{w^{(l)}}^p\\right)^{\\frac{1}{p}}$是一个标量，它是对向量或者矩阵的度量。两个点之间的$L_p$距离可以认为是两个点坐标差值的$p$范数。"
+    "范数$||w||=\\left(\\sum^n_{l=1}{w^{(l)}}^p\\right)^{\\frac{1}{p}}$是一个标量，它是对向量或者矩阵的度量，阅读[梯度下降，L2,L1,L0范数](https://blog.csdn.net/qq_29409037/article/details/90179633)学习更基础的相关知识。两个点之间的$L_p$距离可以认为是两个点坐标差值的$p$范数。"
    ]
   },
   {
