--- a/daily.ipynb
+++ b/daily.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "* [How to Execute Jupyter Notebooks from GitHub](https://soshnikov.com/education/how-to-execute-notebooks-from-github/)\n",
     "\n",
-    "[MyBinder.org](https://mybinder.org/) is a great project that allows you to create virtualized Jupyter Notebook environment from any GitHub repository. You just need to enter the URL, and Binder will create a container for you, and start Jupyter environment. Many repositories with Jupyter Notebooks include Launch Binder button to open the repository in Binder automatically."
+    "[MyBinder.org](https://mybinder.org/) is a great project that allows you to create virtualized Jupyter Notebook environment from any GitHub repository. You just need to enter the URL, and Binder will create a container for you, and start Jupyter environment. Many repositories with Jupyter Notebooks include Launch Binder button to open the repository in Binder automatically.\n",
+    "\n",
+    "* [ct32-Notebooks](https://mybinder.org/v2/gh/tsmclan/ct32-Notebooks.git/HEAD)"
    ]
   },
   {
