--- a/daily.ipynb
+++ b/daily.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/tsmclan/ct32-Notebooks.git/HEAD)\n",
+    "\n",
     "![Why I love programming](images/programming.png)\n",
     "\n",
     "I enjoy programming so much that I stick with it for years, always learning and sharing\n",
@@ -18,8 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* [MyBinder.org](https://mybinder.org/) with https://github.com/tsmclan/ct32-Notebooks.git\n",
-    "* [ct32-Notebooks](https://mybinder.org/v2/gh/tsmclan/ct32-Notebooks.git/HEAD)"
+    "* Build [MyBinder.org](https://mybinder.org/) and launch a repository for https://github.com/tsmclan/ct32-Notebooks.git"
    ]
   },
   {
