--- a/0Scikit-Learn之旅.ipynb
+++ b/0Scikit-Learn之旅.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/tsmclan/ct32-Notebooks.git/HEAD)\n",
     "<a href=\"#初始化importers与sklearn数据集\">初始化importers与sklearn数据集</a> >>\n",
@@ -1565,7 +1571,8 @@
     "ExecuteTime": {
      "end_time": "2022-04-09T11:48:42.242656Z",
      "start_time": "2022-04-09T11:48:40.180164Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1636,13 +1643,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1677,7 +1677,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1691,7 +1691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.18"
   },
   "toc": {
    "base_numbering": 1,
@@ -1742,5 +1742,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
